[workspace]
members = ["xtask"]
resolver = "3"

# =============================================================================
# Development Tasks (xtask)
# =============================================================================
# Run `cargo xtask --help` for all available commands. Quick reference:
#
# Development (macOS - runs in Docker's Linux VM):
#   cargo xtask dev --build      Start dev container (first time)
#   cargo xtask dev              Start dev container (subsequent)
#   cargo xtask shell            Open bash shell in container
#   cargo xtask run              Build and run harborshield
#   cargo xtask run --watch      Auto-rebuild on file changes
#   cargo xtask run --release    Build in release mode
#   cargo xtask stop             Stop dev containers
#   cargo xtask clean            Clean up Docker resources
#   cargo xtask clean --volumes  Also remove cached volumes
#
# IDE Setup (Zed remote development):
#   cargo xtask setup-zed        Add SSH config for Zed remote dev
#   Then in Zed: Cmd+Shift+P -> "Connect to Remote Server via SSH"
#   Enter "harborshield-dev", password "dev", open folder "/app"
#
# Testing:
#   cargo xtask test             Run all tests
#   cargo xtask test --unit      Run only unit tests
#   cargo xtask test --ignored   Run integration tests
#
# Code Quality:
#   cargo xtask check            Run fmt check, clippy, tests
#   cargo xtask check --fix      Auto-fix formatting/clippy issues
#
# Building:
#   cargo xtask build            Build release binary
#   cargo xtask build --linux    Cross-compile for Linux
#
# Database:
#   cargo xtask migrate          Run DB migrations
#   cargo xtask sqlx-prepare     Generate SQLx offline cache
# =============================================================================

[package]
name = "harborshield"
version = "0.1.0"
edition = "2024"
authors = ["Jakob Lochinski"]
description = "A Rust port of Whalewall, to automate management of firewall rules for Docker containers"
license = "MIT"
repository = "https://github.com/rymskip/harborshield"
homepage = "https://github.com/rymskip/harborshield"
documentation = "https://docs.rs/harborshield"
readme = "README.md"
keywords = ["docker", "firewall", "nftables", "security", "container"]
categories = ["network-programming", "command-line-utilities"]
exclude = [
    "tests/",
    "docker-compose*.yml",
    "Dockerfile",
    ".env*",
    "*.log",
    ".git*",
    "target/",
    "/config/",
    ".sqlx/",
    "xtask/"
]

[dependencies]
bon = "3.6.5"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Docker client
bollard = { version = "0.19", features = ["ssl"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
compose_spec = "0.3.0"
bincode = "2.0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Environment variables
dotenvy = "0.15"

# Networking
ipnet = "2.9"

# nftables bindings
nftables = "0.6"
futures = "0.3.31"
async-trait = "0.1.88"

# Security features (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.2"
seccompiler = "0.5.0"
caps = "0.5.5"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# HTTP server for health checks and metrics
axum = { version = "0.8", default-features = false, features = [
    "json",
    "tokio",
] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", default-features = false, features = [
    "cors",
    "trace",
] }

# Metrics and monitoring
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

# Other utilities
bytes = "1.6"
chrono = "0.4"
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
petgraph = "0.8.2"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.13"
uuid = { version = "1.10", features = ["v4"] }
serde_json = "1.0"
bon = "3.6.5"
nix = { version = "0.30.1", features = ["process", "signal"] }
temp-env = { version = "0.3.6", features = ["async_closure"] }
